tests/baselines/reference/typeFromJSInitializer4.errors.txt
a.js(5,29): error TS7006: Parameter 'l' implicitly has an 'any[]' type.
a.js(7,5): error TS2322: Type 'undefined' is not assignable to type 'null'.
a.js(9,5): error TS2322: Type '1' is not assignable to type 'null'.
a.js(10,5): error TS2322: Type 'true' is not assignable to type 'null'.
a.js(11,5): error TS2322: Type '{}' is not assignable to type 'null'.
a.js(12,5): error TS2322: Type '"ok"' is not assignable to type 'null'.
a.js(17,5): error TS2322: Type 'string' is not assignable to type 'number'.


==== a.js (7 errors) ====
    /** @type {number | undefined} */
    var n;
    
    // should get any on parameter initialisers
    function f(a = null, b = n, l = []) {
                                ~~~~~~
!!! error TS7006: Parameter 'l' implicitly has an 'any[]' type.
        // a should be any
        a = undefined
        ~
!!! error TS2322: Type 'undefined' is not assignable to type 'null'.
        a = null
        a = 1
        ~
!!! error TS2322: Type '1' is not assignable to type 'null'.
        a = true
        ~
!!! error TS2322: Type 'true' is not assignable to type 'null'.
        a = {}
        ~
!!! error TS2322: Type '{}' is not assignable to type 'null'.
        a = 'ok'
        ~
!!! error TS2322: Type '"ok"' is not assignable to type 'null'.
    
        // b should be number | undefined, not any
        b = 1
        b = undefined
        b = 'error'
        ~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    
        // l should be any[]
        l.push(1)
        l.push('ok')
    }
    